<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#D8E8C4"
    tools:context=".activities.UserBaseActivity">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/ic_baseline_location_on_24">
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:orientation="vertical">

        <TextView
            android:id="@+id/empID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emp_id"
            android:textStyle="bold"
            android:gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/empName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emp_name"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/empEmail"
            android:text="@string/emp_email"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/empPhone"
            android:text="@string/emp_phone"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/logout"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/logout"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:background="@drawable/login_btn"/>

    </LinearLayout>

</LinearLayout>