<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".activities.AdminBaseActivity">

    <TextView
        android:id="@+id/createUser"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/create_user"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/login_btn">

    </TextView>

    <TextView
        android:id="@+id/usersTrack"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/users_track"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:background="@drawable/login_btn"/>

    <TextView
        android:id="@+id/logout"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/logout"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/login_btn">

    </TextView>

</LinearLayout>