<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".activities.AdminBaseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_login"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/black">
    </TextView>

    <View
        android:layout_width="250dp"
        android:layout_height="4dp"
        android:background="@color/black"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingTop="10dp"
        android:textColorHint="@color/black"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/black"
        android:paddingEnd="20dp"
        android:autofillHints="username"
        android:textSize="20sp"
        android:background="@drawable/ed_text_bg"
        android:hint="@string/enter_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/black"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:paddingEnd="20dp"
        android:textSize="20sp"
        android:background="@drawable/ed_text_bg"
        android:hint="@string/enter_password"
        android:autofillHints="password" />

    <TextView
        android:id="@+id/loginBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@drawable/login_btn"
        android:text="@string/login_btn"/>

</LinearLayout>